--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "io": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.10",
+    "openssl": "^1.1.0",
     "peer": "^0.5.3",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.1"
