--- a/Server/package.json
+++ b/Server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.10",
     "nodeman": "1.1.2",
-    "openssl": "1.1.0",
+    "openssl": "^1.1.0",
     "peer": "^0.5.3",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.1"
