--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -12,10 +12,14 @@
     "react-google-login": "^5.1.21",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
+    "simple-peer": "^9.8.0",
+    "socket.io": "^2.3.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel start:**",
+    "start:client": "react-scripts start",
+    "start:server": "node ../Server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
