--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/posenet": "^2.2.1",
+    "@tensorflow/tfjs": "^2.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,6 +14,7 @@
     "react-google-login": "^5.1.21",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
+    "react-webcam": "^5.2.1",
     "simple-peer": "^9.8.0",
     "socket.io": "^2.3.0",
     "styled-components": "^5.2.0"
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
