--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -19,8 +19,8 @@
     "socket.io": "^2.3.0",
     "styled-components": "^5.2.0"
   },
-  "scripts": {
-    "start": "npm-run-all --parallel start:**",
+  "scripts": {    
+    "start" : "react-scripts start",
     "start:client": "react-scripts start",
     "start:server": "node ../Server/server.js",
     "build": "react-scripts build",
