--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +16,10 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "heroku": "^7.47.0",
     "io": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.10",
+    "mongoose": "^5.10.12",
     "nodeman": "1.1.2",
     "openssl": "^1.1.0",
     "peer": "^0.5.3",
