--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
+    "react-login-by-naver": "0.1.8",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "react-webcam": "^5.2.1",
