--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -14,7 +14,9 @@
     "peerjs": "1.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "4.1.1",
     "react-google-login": "^5.1.21",
+    "react-kakao-login": "2.0.2",
     "react-login-by-naver": "0.1.8",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
