--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/runtime-corejs3": "^7.12.5",
+    "@dohyeon/react-naver-login": "0.1.1-1",
     "@tensorflow-models/posenet": "2.2.1",
     "@tensorflow/tfjs": "2.7.0",
     "@testing-library/jest-dom": "^4.2.4",
