--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "http-proxy-middleware": "^1.0.6",
     "peerjs": "1.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
