--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -26,7 +26,8 @@
     "react-webcam": "^5.2.1",
     "simple-peer": "^9.8.0",
     "socket.io": "^2.3.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "styled-icons": "10.22.0"
   },
   "scripts": {
     "start": "react-scripts start && node ../Server/server.js",
