--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -27,7 +27,7 @@
     "simple-peer": "^9.8.0",
     "socket.io": "^2.3.0",
     "styled-components": "^5.2.0",
-    "styled-icons": "10.22.0"
+    "styled-icons": "^10.22.0"
   },
   "scripts": {
     "start": "react-scripts start && node ../Server/server.js",
