--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -16,6 +16,7 @@
     "http-proxy-middleware": "^1.0.6",
     "peerjs": "1.3.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-facebook-login": "4.1.1",
     "react-google-login": "^5.1.21",
