--- a/helf-react/package.json
+++ b/helf-react/package.json
@@ -6,6 +6,7 @@
     "@babel/cli": "^7.12.1",
     "@babel/runtime-corejs3": "^7.12.5",
     "@dohyeon/react-naver-login": "0.1.1-1",
+    "@teachablemachine/pose": "^0.6.3",
     "@tensorflow-models/posenet": "2.2.1",
     "@tensorflow/tfjs": "2.7.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -13,15 +14,19 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "create-react-class": "^15.7.0",
     "http-proxy-middleware": "^1.0.6",
+    "jquery": "^3.5.1",
     "peerjs": "1.3.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-facebook-login": "4.1.1",
     "react-google-login": "^5.1.21",
+    "react-helmet": "^6.1.0",
     "react-kakao-login": "2.0.2",
     "react-login-by-naver": "0.1.8",
+    "react-player": "^2.7.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "react-webcam": "^5.2.1",
